quick overflow-x fix to fix mobile responsiveness

--- a/styles/sass/partials/_base.scss
+++ b/styles/sass/partials/_base.scss
@@ -1,4 +1,8 @@
 .scrollContainer {
+    overflow-x: hidden;
+}
+
+.scrollContainer {
     overflow-y: scroll;
     height: 100vh;
     scroll-snap-type: y mandatory;
